revise gulpfile.js

--- a/sandbox/client.html
+++ b/sandbox/client.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>reixs client</title>
+    <link rel="stylesheet" href="sandbox/static/index.css">
 </head>
 <body>
-    
+    <img src="sandbox/static/reixs.jpg">
 </body>
-<script src="../dist/reixs.min.js"></script>
+<script src="dist/reixs.js"></script>
 <script>
     // npm version
-    console.log(`version:${reixs.version}`)
-
+    console.log(`version:${reixs.version}1`)
+    
 </script>
 </html>
