--- a/sandbox/client.html
+++ b/sandbox/client.html
@@ -13,7 +13,8 @@
 <script src="dist/reixs.js"></script>
 <script>
     // npm version
-    console.log(`version:${reixs.version}1`)
-    
+    console.log(`version:${reixs.version}`)
+    let cases = reixs('http://www.baidu.com')
+    console.log(cases.request)
 </script>
 </html>
