Modify the configuration

--- a/sandbox/client.html
+++ b/sandbox/client.html
@@ -15,6 +15,6 @@
     // npm version
     console.log(`version:${reixs.version}`)
     let cases = reixs('http://www.baidu.com')
-    console.log(cases.request)
+    console.log(cases.request())
 </script>
 </html>
